--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "react-hooks/rules-of-hooks": "error",
     "camelcase": "off",
     "no-useless-return": "off",
+    "import/no-duplicates": "off",
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
     "@typescript-eslint/ban-types": "off",
